--- a/menu/index.html
+++ b/menu/index.html
@@ -25,7 +25,8 @@
     <link rel="canonical" href="http://www.beerstrot.it/menu/"/>
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 <!-- Facebook Pixel Code -->
     <script>
@@ -148,7 +149,7 @@
             </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Hamburger (180 grammi)<br><small>Servito con patate fritte. Cottura media.</small></h2>
+                    <h2 class="subheader">Hamburger (180 grammi)<br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media.</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
                             <h3>Beerstrot &emsp; 10,5 / doppio 14,9</h3>
@@ -185,6 +186,25 @@
                         <li>
                             <h3>Mini Burger (100 Grammi)&emsp; 6</h3>
                             <p>manzo, cheddar</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Non Solo Carne<br><small>Burger vegetariani e di pesce di nostra produzione. Serviti con patate fritte.</small></h2>
+                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                        <li>
+                            <h3>Salmone &emsp; 13,5 / doppio 17,9</h3>
+                            <p>hamburger di salmone (150 grammi), citronette agli agrumi, capperi e insalata riccia</p>
+                        </li>
+                        <li>
+                            <h3>Persico &emsp; 12,5 / doppio 16,5</h3>
+                            <p>hamburger di persico (150 grammi), salsa di tonno, acciughe e capperi; insalata riccia</p>
+                        </li>
+                        <li>
+                            <h3>Vegetariano &emsp; 8,9</h3>
+                            <p>hamburger di borlotti, julienne di cipolla fritta, bietole</p>
                         </li>
                     </ul>
                 </div>
@@ -458,8 +478,10 @@
             <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Prenota</h4>
                 <p>
-                    <a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a><br>
-                    <a href="https://wa.me/390718853384"><span itemprop="telephone"><i class="fa fa-whatsapp"></i> Whatsapp</span></a>
+                    <a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a>
+                </p>
+                <p>
+                    <a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a>
                 </p>
             </div>
             <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
