--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<link rel="canonical" href="http://www.beerstrot.it"/>
 	<link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 <!-- Facebook Pixel Code -->
@@ -78,12 +79,12 @@
 				<h1 class="text-highlight" itemprop="description">Per chi&thinsp;&ndash;come noi&ndash;&thinsp;<br>ama gli hamburger goduriosi<br>e la birra artigianale</h1>
 			</div>
 		</div>
-		<div class="row">
+		<!-- <div class="row">
 			<div class="small-12 columns show-for-small-only extra-space clearfix">
 				<a role="button" href="tel:+390718853384" class="button small left extra-space-button"><i class="fa fa-phone"></i> Chiama</a>
 				<a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fa fa-map-marker"></i> Dove Siamo</a>
 			</div>
-		</div>
+		</div> -->
 	</header>
 <!-- fine header -->
 	<div class="panel-home-n">
@@ -107,10 +108,11 @@
                 <p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p>
 			</div>
 			<div class="medium-12 large-12 columns">
-				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left"><i class="fa fa-phone"></i> 071 8853384</a></span>
-				<span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
-				<span class="show-for-small"><a role="button" href="https://wa.me/390718853384" class="button small right extra-space-from-tabs"><i class="fa fa-whatsapp"></i> Whatsapp</a></span>
-			</div>
+                <br>
+                <span class="hide-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i> Ordina Online</a></span>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
+                <span class="show-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Ordina Online</a></span>
+            </div>
 		</div>
 	</div>
 	<div class="panel-home-2n">
@@ -245,12 +247,14 @@
 	<footer class="panel-footer">
 		<div class="row">
 			<div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
-				<h4 class="subheader">Prenota</h4>
-				<p>
-					<a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a><br>
-					<a href="https://wa.me/390718853384"><span itemprop="telephone"><i class="fa fa-whatsapp"></i> Whatsapp</span></a>
-				</p>
-			</div>
+                <h4 class="subheader">Prenota</h4>
+                <p>
+                    <a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a>
+                </p>
+                <p>
+                    <a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a>
+                </p>
+            </div>
 			<div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
 				<h4 class="subheader">Dove siamo</h4>
 				<p>
