--- a/menu/index.html
+++ b/menu/index.html
@@ -77,12 +77,16 @@
             <h1>Menù</h1>
             <hr>
             <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></p>
-            <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left"><i class="fa fa-phone"></i> 071 8853384</a></span>
-            <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
-            <span class="show-for-small"><a role="button" href="https://wa.me/390718853384" class="button small right extra-space-from-tabs"><i class="fa fa-whatsapp"></i> Whatsapp</a></span>
-            <hr>
         </div>
     </header>
+        <div class="row">
+            <div class="medium-12 large-12 columns">
+                <br>
+                <span class="hide-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></span>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i>Chiama</a></span>
+                <span class="show-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></span>
+            </div>
+        </div>
 <!-- inizio tabbar switch-->
     <div class="row">
         <div class="medium-12 large-12 small-12 columns extra-space-hero">
@@ -426,10 +430,10 @@
 <!-- vino fine -->
 <!-- call to action inizio -->
         <div class="row">
-            <div class="large-12 medium-12 small-12 columns">
-                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button left"><i class="fa fa-phone"></i> 071 8853384</a></span>
-                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i> Chiama</a></span>
-                <span class="show-for-small"><a role="button" href="https://wa.me/390718853384" class="button small right extra-space-from-tabs"><i class="fa fa-whatsapp"></i> Whatsapp</a></span>
+            <div class="medium-12 large-12 columns">
+                <span class="hide-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></span>
+                <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button small left extra-space-from-tabs"><i class="fa fa-phone"></i>Chiama</a></span>
+                <span class="show-for-small"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></span>
             </div>
         </div>
 <!-- call to action fine -->
