--- a/asporto/index.html
+++ b/asporto/index.html
@@ -196,10 +196,6 @@
                             <p>pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                         </li>
                         <li>
-                            <h3>Vegetariano &emsp; 8,9</h3>
-                            <p>hamburger di borlotti, julienne di cipolla fritta, bietole</p>
-                        </li>
-                        <li>
                             <h3>Mini Burger (100 Grammi)&emsp; 6</h3>
                             <p>manzo, cheddar</p>
                         </li>
@@ -296,12 +292,20 @@
                             <p>bionda pils 4,9%</p>
                         </li>
                         <li>
+                            <h3>Mukkellerina Pils 50cl &emsp; 6</h3>
+                            <p>Keller con finale secco 4,8%</p>
+                        </li>
+                        <li>
                             <h3>Hirsch Winterbier 50cl &emsp; 6</h3>
                             <p>mazen 6,3%</p>
                         </li>
                         <li>
                             <h3>Zotler 1447 50cl &emsp; 6</h3>
                             <p>bionda non filtrata tedesca 4,9%</p>
+                        </li>
+                        <li>
+                            <h3>Zotler Fest Bier 50cl &emsp; 6</h3>
+                            <p>marzen tedesca 5,8%</p>
                         </li>
                         <li>
                             <h3>Zotler Weisse 50cl &emsp; 6</h3>
@@ -318,6 +322,22 @@
                         <li>
                             <h3>Mukkeller Mugnetti 50cl &emsp; 6</h3>
                             <p>ale 6% </p>
+                        </li>
+                        <li>
+                            <h3>Mukkeller Marina 50cl &emsp; 6</h3>
+                            <p>american pale ale 6,4%</p>
+                        </li>
+                        <li>
+                            <h3>Mukkeller Tulio 50cl &emsp; 6</h3>
+                            <p>rye IPA 6,5%</p>
+                        </li>
+                        <li>
+                            <h3>Mukkeller Hattori 50cl &emsp; 6</h3>
+                            <p>doppia IPA 8,2%</p>
+                        </li>
+                        <li>
+                            <h3>Mukkeller mr Wolf 33cl &emsp; 6</h3>
+                            <p>belgian triple 9,2%</p>
                         </li>
                         <li>
                             <h3>Hirsch Doppelbock 50cl &emsp; 6</h3>
