--- a/asporto/index.html
+++ b/asporto/index.html
@@ -74,7 +74,7 @@
     <header class="asporto-hero" itemscope itemtype="http://schema.org/Restaurant">
         <div class="row">
             <div class="small-12 columns">
-                <h1 class="text-highlight" itemprop="description">Hamburger direttamente a casa tua. <br>Ca' Vecchia Beerstrot ti è sempre più vicino.</h1>
+                <h1 class="text-highlight" itemprop="description">Hamburger a casa tua, Caldo, in meno di 30 Minuti</h1>
             </div>
         </div>
         <!-- <div class="row">
@@ -100,7 +100,7 @@
             <div class="medium-6 large-6 columns">
                 <span class="show-for-small"><br></span>
                 <h4><strong>Servizio consegna a domicilio:</strong> 1,5€ per ordine; gratis per ordini superiori ai 40€.</h4>
-                <h4>Effettuiamo le consegne a Filottrano Centro e Montoro.</h4>
+                <h4>Effettuiamo le consegne a Filottrano e Montoro.</h4>
             </div>
         </div>
         <div class="row">
