--- a/asporto/index.html
+++ b/asporto/index.html
@@ -74,7 +74,7 @@
     <header class="asporto-hero" itemscope itemtype="http://schema.org/Restaurant">
         <div class="row">
             <div class="small-12 columns">
-                <h1 class="text-highlight" itemprop="description">Hamburger a casa tua, Caldo, in meno di 30 Minuti</h1>
+                <h1 class="text-highlight" itemprop="description">Hamburger a casa tua, Caldo, in meno di 30 minuti</h1>
             </div>
         </div>
         <!-- <div class="row">
