--- a/asporto/index.html
+++ b/asporto/index.html
@@ -221,6 +221,25 @@
                     </ul>
                 </div>
             </div>
+             <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Carni <br></h2>
+                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                        <li>
+                            <h3>Costine &emsp; 13,9</h3>
+                            <p>baby ribs di suino allevato allo stato brado in salsa bbq <br>servite con patate fritte</p>
+                        </li>
+                        <li>
+                            <h3>Tagliata di Picanha &emsp; 19</h3>
+                            <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
+                        </li>
+                        <li>
+                            <h3>Cotoletta alla Milanese &emsp; 21</h3>
+                            <p>costoletta di vitello con osso impanata e cotta nel burro chiarificato <br>servita con insalata e patate fritte</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
@@ -373,37 +392,13 @@
     </div>
 <!-- tab fine -->
 <!-- inizio footer -->
-    <footer class="panel-prefooter">
-        <div class="row">
-            <div class="large-6 medium-6 columns">
-                <h4 class="subheader">Fai parte della community</h4>
-                <ul class="inline-list no-margin-inline-list">
-                    <li>
-                        <a id="yourLink1" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 72 72" style="width: 32px; height: 32px;" enable-background="new 0 0 32 32"><g><path class="fi-social" fill="#3b5998" d="M68 0H4C1.8 0 0 1.8 0 4v64c0 2.2 1.8 4 4 4h34.5V44.1h-9.4V33.3h9.4v-8c0-9.3 5.7-14.4 14-14.4 4 0 7.4.3 8.4.4V21h-5.8c-4.5 0-5.4 2.1-5.4 5.3v6.9h10.8L59 44.1h-9.4V72H68c2.2 0 4-1.8 4-4V4c0-2.2-1.8-4-4-4z"/></g></svg></a>
-                    </li>
-                    <li>
-                        <a id="yourLink2" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" width="32" height="32" viewBox="0 0 72 72"><radialGradient id="SVGID_1_" cx="20.9" cy="71.8" r="72.6" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#FFD776"/><stop offset="0.2463" stop-color="#F3A554"/><stop offset="0.3793" stop-color="#F15C3C"/><stop offset="0.5394" stop-color="#D94867"/><stop offset="0.6995" stop-color="#C32F87"/><stop offset="0.9122" stop-color="#7D63A7"/><stop offset="0.9852" stop-color="#5C6CB3"/></radialGradient><path class="fi-social" d="M72 56.5C72 65.2 64.9 72 56.2 72H15.6C6.9 72 0 65.2 0 56.5V16.1C0 7.4 6.9 0 15.6 0h40.7C64.9 0 72 7.4 72 16.1V56.5z" fill="url(#SVGID_1_)"/><path d="M60 48.6C60 56 54 62 46.6 62H25.4C18 62 12 56 12 48.6V25.4C12 18 18 12 25.4 12h21.2C54 12 60 18 60 25.4V48.6z" style="fill:none;stroke-width:6;stroke:#FFF"/><path d="M47.8 36.3c-0.1 6.6-5.3 11.9-11.9 11.9S24 42.9 24 36.3s5.3-12.1 11.9-11.9C43.9 24.7 47.9 29.8 47.8 36.3z" style="fill:none;stroke-width:7;stroke:#FFF"/><circle cx="50.5" cy="21.7" r="3.3" fill="#FFF"/></svg></a>
-                    </li>
-                    <li>
-                        <a href="http://www.tripadvisor.it/Restaurant_Review-g1587889-d2373449-Reviews-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html" target="_blank" ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 72 72" style="width: 32px; height: 32px;" enable-background="new 0 0 72 72"><path class="fi-social" fill="#589442" d="M18.1 24.8c-8 0-14.4 6.5-14.4 14.4 0 8 6.5 14.4 14.4 14.4 8 0 14.4-6.5 14.4-14.4 0-8-6.5-14.4-14.4-14.4zm-.2 23.1c-4.8 0-8.7-3.9-8.7-8.7 0-4.8 3.9-8.7 8.7-8.7 4.8 0 8.7 3.9 8.7 8.7 0 4.8-3.9 8.7-8.7 8.7zm35.5-26.6c-5.1-2.2-10.9-3.5-17.4-3.5-6.4 0-12.8 1.2-17.9 3.4 9.9 0 17.9 8 17.9 17.9 0-9.6 7.7-17.5 17.4-17.8zM17.9 33.1c-3.3 0-6 2.7-6 6s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6zm-.5 9c-1.6 0-2.9-1.3-2.9-2.9 0-1.6 1.3-2.9 2.9-2.9s2.9 1.3 2.9 2.9c0 1.6-1.3 2.9-2.9 2.9zm54.4-2.9c0 9.9-8 17.9-17.9 17.9-5.6 0-10.6-2.6-13.9-6.6-1.4 1.8-4 5.6-4 5.6-.4-.9-2.7-4.1-4-5.6-3.3 4-8.3 6.6-13.9 6.6-9.9 0-17.9-8-17.9-17.9 0-3.9 1.3-7.6 3.4-10.5-.3-2-1.7-5-3.6-7.1V68c0 2.2 1.8 4 4 4h64c2.2 0 4-1.8 4-4V21.5c-1.9 2.2-3.2 5.1-3.6 7.2 2.2 2.9 3.4 6.6 3.4 10.5zm-23.9-.1c0 3.3 2.7 6 6 6s6-2.7 6-6-2.7-6-6-6-6 2.7-6 6zm8.5 0c0 1.6-1.3 2.9-2.9 2.9-1.6 0-2.9-1.3-2.9-2.9s1.3-2.9 2.9-2.9c1.6 0 2.9 1.3 2.9 2.9zm-16.9.1c0 8 6.5 14.4 14.4 14.4 8 0 14.4-6.5 14.4-14.4 0-8-6.5-14.4-14.4-14.4s-14.4 6.4-14.4 14.4zm23.1-.1c0 4.8-3.9 8.7-8.7 8.7-4.8 0-8.7-3.9-8.7-8.7 0-4.8 3.9-8.7 8.7-8.7 4.8 0 8.7 3.9 8.7 8.7zM68 0H4C1.8 0 0 1.8 0 4v17.5h11.4c6.1-4.1 15-6.7 24.6-6.7 9.6 0 17.9 2.6 24 6.7h12V4c0-2.2-1.8-4-4-4z"/></svg></a>
-                    </li>
-                </ul>
-            </div>
-            </div>
-    </footer>
-    <footer class="panel-hr">
-        <hr>
-    </footer>
     <footer class="panel-footer">
         <div class="row">
             <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Prenota</h4>
-                <p>
                     <a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a>
-                </p>
-                <p>
+                    <br>
                     <a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a>
-                </p>
             </div>
             <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Dove siamo</h4>
@@ -419,7 +414,7 @@
                     </a>
                 </p>
             </div>
-            <div class="small-6 medium-3 large-3 large-collapse columns" itemscope itemtype="http://schema.org/Restaurant">
+            <div class="small-6 medium-3 large-3 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Orari apertura</h4>
                  <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                 <div class="row">
@@ -439,6 +434,27 @@
                     </li>
                     <li>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="14.3 17 896.4 560" style="max-width: 80px" enable-background="new 14.3 17 896.4 560"><path fill="#FFF200" d="M910.1 356.9V38.1c0-11.6-9-20.6-20.6-20.6h-854c-11.7 0-20.6 9-20.6 20.6v318.8h895.2z"/><path class="img-cards" fill="#034EA2" d="M624 189.9L757.3 61.4 890 194.1 758.4 325.7z"/><path fill="none" stroke="#A7A9AC" stroke-width="2.143" stroke-miterlimit="2.613" d="M624 189.9L757.3 61.4 890 194.1 758.4 325.7z"/><path fill="#A7A9AC" d="M722.9 112.2l-8.5 21.1h40.7s25.4-2.7 25.4 22.7-24.8 22.7-24.8 22.7h-32.2L713.4 202h41.3s23.8-2.7 23.8 20.6-23.8 22.2-23.8 22.2h-29.1l-11.1 23.8 58.7-.6s38 .6 38-32.8c0-25.4-16.4-33.3-16.4-33.3H827l-9.5-22.2h-18s12.6-12.6 12.6-30.7-14.3-37-36.5-36.5l-52.7-.3zM117.5 148.1c12.6 0 21.7-7.4 21.7-28.5 0-22.7-17.5-25.9-28.5-25.9H95.2v54.5l22.3-.1zM41.3 280.9V36.5h78.8c47.1 0 69.8 32.2 69.8 82.5 0 52.4-21.1 85.7-68.2 85.7h-27v76.2H41.3zM274.5 202c-15.3 11.1-35.9 5.8-35.9 29.1 0 9 5.8 14.8 14.8 14.8 16.9.1 22.1-19.1 21.1-43.9zm4.7 78.9l-2.1-19c-13.2 18.5-27 24.3-45 24.3-22.7 0-42.8-16.4-42.8-53.4 0-80.9 85.1-43.9 85.1-77.2 0-12.6-10.6-14.8-15.3-14.8-6.4 0-15.3 2.1-16.4 17.5h-45.5c0-37.6 18-59.7 65-59.7 56.6 0 59.7 31.2 59.7 73.5v83c0 10.1 0 15.3 6.4 22.7v3.1h-49.1zM381.8 188.8c0 17.5 5.8 34.3 18.5 34.3 14.8 1 20.1-17.5 20.1-36.5 0-19.6-4.8-38.6-20.1-38.6-14.2.1-18.5 18.1-18.5 40.8zm6.4 101c0 2.1 1 5.3 3.1 7.9 2.1 2.7 5.3 4.2 10.1 4.2 13.8 0 19-9 19-34.3v-14.3c-6.8 10.1-16.9 19.6-34.3 19.6-32.8 0-51.8-38.6-51.8-84 0-43.9 14.3-90.4 53.4-90.4 14.3 0 28.1 11.1 35.9 28.5v-23.2h41.7V247c0 53.4-4.2 95.2-62.9 95.2-42.3 0-59.7-24.8-62.4-51.2h48.1l.1-1.2zM519.9 200.4c0 33.8 8.5 48.1 20.6 48.1 12.6 0 20.6-14.8 20.6-48.1 0-25.9-7.9-46-20.1-45-16.4.1-21.1 24.9-21.1 45zm20.5-92.5c42.3 0 68.2 37 68.2 92.5 0 65-29.6 95.7-67.7 95.7-38 0-67.7-31.2-67.7-92-.4-61.9 26.5-96.2 67.2-96.2z"/><path fill="#034EA2" d="M886.3 391.8h-75.1c-3.1 0-6.8 2.7-7.4 5.8l-2.1 11.6c-.6 3.1 1.6 5.8 5.3 5.8h21.7l-11.1 95.2c-.6 3.1 2.1 6.4 5.3 6.4H843c3.1 0 6.4-2.7 6.8-6.4l11.1-95.2h21.2c3.1 0 6.8-2.7 7.4-5.8l2.1-11.6c0-3.1-2.1-5.8-5.3-5.8zM634.6 440l-12.2-38c-2.7-6.8-6.4-10.1-10.1-10.1h-28.1c-3.1 0-6.8 2.7-7.4 5.8L562 510.8c-.6 3.1 2.1 6.4 5.3 6.4h20.1c3.1 0 6.4-2.7 6.8-6.4l7.9-69.3 10.1 40.7c1 2.7 3.1 5.8 6.8 5.8h13.8c3.1 0 9-1 12.2-6.4l14.8-25.9-5.8 55c-.6 3.1 2.1 6.4 5.3 6.4h20.2c3.1 0 6.4-2.7 6.8-6.4l14.3-113.1c.6-3.1-1.6-5.8-5.3-5.8H671s-7.9-1-14.3 10.1c-5.2 9-22.1 38.1-22.1 38.1zM347.5 391.8h18c3.1 0 5.8 2.7 5.3 5.8L357 510.8c-.6 3.1-3.7 6.4-6.8 6.4h-16.9c-3.7 0-6.8-2.7-9.5-6.4-9.5-14.3-25.9-51.2-25.9-51.2l-4.8 51.2c-.6 3.1-3.1 6.4-6.8 6.4h-20.1c-3.1 0-5.8-2.7-5.3-6.4l13.8-113.1c.6-3.1 3.7-5.8 7.4-5.8H298c3.1 0 7.9 5.3 11.6 10.1l24.8 37 4.8-41.7c-.7.4.3-5.5 8.3-5.5zM192.5 462.7l10.6-29.6 4.2 29.6h-14.8zm40.2-61.9c-1.6-5.8-5.8-9.5-9.5-9.5h-29.1c-3.1 0-6.8 2.7-7.4 5.8l-46 111.1c-1.6 4.8 2.1 7.9 5.3 7.9h21.7c4.8 0 6.8-5.3 8.5-9.5l7.9-22.2H210l3.7 23.3s.6 9 11.1 9h20.1c3.1 0 7.4-4.8 6.4-9.5l-18.6-106.4zM745.6 462.7l10.6-29.6 4.2 29.6h-14.8zm40.2-61.9c-1.6-5.8-5.8-9.5-9.5-9.5h-29.1c-3.1 0-6.8 2.7-7.4 5.8l-46 111.1c-1.6 4.8 2.1 7.9 5.3 7.9h21.7c4.8 0 6.8-5.3 8.5-9.5l7.9-22.2H763l3.7 23.3s.6 9 11.1 9h20.1c3.1 0 7.4-4.8 6.4-9.5l-18.5-106.4zM459 392.4h-39.7c-36.5 0-39.7 33.8-39.7 33.8s-3.7 20.6-8.5 55.5 21.1 35.5 32.2 35.5h40.2c3.1 0 6.4-2.7 6.8-6.4l1.6-12.2c.6-3.1-2.7-5.3-5.8-5.3h-23.8c-21.7 0-18.5-14.8-18.5-14.8s5.3-34.3 6.8-47.1c1.6-12.6 12.2-15.9 22.3-15.9h23.3c3.1 0 6.4-1.6 6.8-5.3l1.6-12.2c.2-2.5-2.4-5.6-5.6-5.6zM529.4 429.9s-3.1 34.3-5.3 45c-3.1 15.3-10.6 17.5-16.9 17.5-15.9 0-12.6-13.2-12.6-13.2s5.3-34.3 6.8-47.1c1.5-12.7 9-14.3 18.5-14.3 11-.6 9.5 12.1 9.5 12.1zm6.8-37.5c-17.5-2.1-31.8.6-31.8.6-30.1 2.7-34.3 33.8-34.3 33.8s-3.7 20.6-8.5 55.5 21.7 36.5 38.6 36.5c0 0 48.1 4.8 53.9-35.5 5.8-41.3 6.8-53.9 7.4-60.9 2.2-16.2-8.3-27.9-25.3-30zM97.3 438.9H83l2.1-16.4h16.4s7.9-.6 6.8 6.8c-.3 7.5-4 9.6-11 9.6zm7 42.9c-1 9.5-6.4 12.6-14.3 13.2-7.4.6-13.8 0-13.8 0l3.1-26.4h16.9c.1-.1 10.2-1.1 8.1 13.2zm15.8-28.6c19.6-9.5 20.1-24.3 21.1-33.8 2.7-22.7-20.1-26.4-26.4-26.4H60.9c-3.7 0-6.8 3.1-7.4 6.4l-13.2 111c-.6 3.7 2.1 6.4 5.8 6.4h58.2c17.5 0 32.8-15.3 34.9-32.2 3.1-26.1-19.1-31.4-19.1-31.4z"/><path fill="none" stroke="#034EA2" stroke-miterlimit="2.613" d="M14.8 558.5c0 9.9 8.1 18 18 18h859.4c9.9 0 18-8.1 18-18v-523c0-9.9-8.1-18-18-18H32.8c-9.9 0-18 8.1-18 18v523z"/></svg>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+     <footer class="panel-hr">
+        <hr>
+    </footer>
+    <footer class="panel-prefooter">
+        <div class="row">
+            <div class="large-6 medium-6 columns">
+                <h4 class="subheader">Fai parte della community</h4>
+                <ul class="inline-list no-margin-inline-list">
+                    <li>
+                        <a id="yourLink1" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 72 72" style="width: 32px; height: 32px;" enable-background="new 0 0 32 32"><g><path class="fi-social" fill="#3b5998" d="M68 0H4C1.8 0 0 1.8 0 4v64c0 2.2 1.8 4 4 4h34.5V44.1h-9.4V33.3h9.4v-8c0-9.3 5.7-14.4 14-14.4 4 0 7.4.3 8.4.4V21h-5.8c-4.5 0-5.4 2.1-5.4 5.3v6.9h10.8L59 44.1h-9.4V72H68c2.2 0 4-1.8 4-4V4c0-2.2-1.8-4-4-4z"/></g></svg></a>
+                    </li>
+                    <li>
+                        <a id="yourLink2" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" width="32" height="32" viewBox="0 0 72 72"><radialGradient id="SVGID_1_" cx="20.9" cy="71.8" r="72.6" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#FFD776"/><stop offset="0.2463" stop-color="#F3A554"/><stop offset="0.3793" stop-color="#F15C3C"/><stop offset="0.5394" stop-color="#D94867"/><stop offset="0.6995" stop-color="#C32F87"/><stop offset="0.9122" stop-color="#7D63A7"/><stop offset="0.9852" stop-color="#5C6CB3"/></radialGradient><path class="fi-social" d="M72 56.5C72 65.2 64.9 72 56.2 72H15.6C6.9 72 0 65.2 0 56.5V16.1C0 7.4 6.9 0 15.6 0h40.7C64.9 0 72 7.4 72 16.1V56.5z" fill="url(#SVGID_1_)"/><path d="M60 48.6C60 56 54 62 46.6 62H25.4C18 62 12 56 12 48.6V25.4C12 18 18 12 25.4 12h21.2C54 12 60 18 60 25.4V48.6z" style="fill:none;stroke-width:6;stroke:#FFF"/><path d="M47.8 36.3c-0.1 6.6-5.3 11.9-11.9 11.9S24 42.9 24 36.3s5.3-12.1 11.9-11.9C43.9 24.7 47.9 29.8 47.8 36.3z" style="fill:none;stroke-width:7;stroke:#FFF"/><circle cx="50.5" cy="21.7" r="3.3" fill="#FFF"/></svg></a>
+                    </li>
+                    <li>
+                        <a href="http://www.tripadvisor.it/Restaurant_Review-g1587889-d2373449-Reviews-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html" target="_blank" ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 72 72" style="width: 32px; height: 32px;" enable-background="new 0 0 72 72"><path class="fi-social" fill="#589442" d="M18.1 24.8c-8 0-14.4 6.5-14.4 14.4 0 8 6.5 14.4 14.4 14.4 8 0 14.4-6.5 14.4-14.4 0-8-6.5-14.4-14.4-14.4zm-.2 23.1c-4.8 0-8.7-3.9-8.7-8.7 0-4.8 3.9-8.7 8.7-8.7 4.8 0 8.7 3.9 8.7 8.7 0 4.8-3.9 8.7-8.7 8.7zm35.5-26.6c-5.1-2.2-10.9-3.5-17.4-3.5-6.4 0-12.8 1.2-17.9 3.4 9.9 0 17.9 8 17.9 17.9 0-9.6 7.7-17.5 17.4-17.8zM17.9 33.1c-3.3 0-6 2.7-6 6s2.7 6 6 6 6-2.7 6-6-2.7-6-6-6zm-.5 9c-1.6 0-2.9-1.3-2.9-2.9 0-1.6 1.3-2.9 2.9-2.9s2.9 1.3 2.9 2.9c0 1.6-1.3 2.9-2.9 2.9zm54.4-2.9c0 9.9-8 17.9-17.9 17.9-5.6 0-10.6-2.6-13.9-6.6-1.4 1.8-4 5.6-4 5.6-.4-.9-2.7-4.1-4-5.6-3.3 4-8.3 6.6-13.9 6.6-9.9 0-17.9-8-17.9-17.9 0-3.9 1.3-7.6 3.4-10.5-.3-2-1.7-5-3.6-7.1V68c0 2.2 1.8 4 4 4h64c2.2 0 4-1.8 4-4V21.5c-1.9 2.2-3.2 5.1-3.6 7.2 2.2 2.9 3.4 6.6 3.4 10.5zm-23.9-.1c0 3.3 2.7 6 6 6s6-2.7 6-6-2.7-6-6-6-6 2.7-6 6zm8.5 0c0 1.6-1.3 2.9-2.9 2.9-1.6 0-2.9-1.3-2.9-2.9s1.3-2.9 2.9-2.9c1.6 0 2.9 1.3 2.9 2.9zm-16.9.1c0 8 6.5 14.4 14.4 14.4 8 0 14.4-6.5 14.4-14.4 0-8-6.5-14.4-14.4-14.4s-14.4 6.4-14.4 14.4zm23.1-.1c0 4.8-3.9 8.7-8.7 8.7-4.8 0-8.7-3.9-8.7-8.7 0-4.8 3.9-8.7 8.7-8.7 4.8 0 8.7 3.9 8.7 8.7zM68 0H4C1.8 0 0 1.8 0 4v17.5h11.4c6.1-4.1 15-6.7 24.6-6.7 9.6 0 17.9 2.6 24 6.7h12V4c0-2.2-1.8-4-4-4z"/></svg></a>
                     </li>
                 </ul>
             </div>
