--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@
 		                    </a>
 		                </p>
 		            </li>
-					<li><h4 class="subheader">Orari apertura</h4>
+					<li>
+						<h4 class="subheader">Orari apertura</h4>
 	                	<meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
 		                <div class="row">
 		                    <div class="large-12 medium-12 small-12 columns">
