--- a/index.html
+++ b/index.html
@@ -213,8 +213,11 @@
 				<ul class="small-block-grid-2 medium-block-grid-4 large-block-grid-4">
 		  			<li>
 		  				<h4 class="subheader">Prenota</h4>
-		                <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
-		                <p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></p>
+		                <p>
+		                	<a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a>
+		                	<br>
+		                	<a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a>
+		                </p>
 		            </li>
 		  			<li>
 		  				<h4 class="subheader">Dove siamo</h4>
