--- a/menu/index.html
+++ b/menu/index.html
@@ -366,17 +366,14 @@
                                 <p>doppia IPA 8,2%</p>
                             </li>
                             <li>
-                                <h3>Mukkeller mr Wolf 33cl &emsp; 6</h3>
+                                <h3>Mukkeller Mr Wolf 33cl &emsp; 6</h3>
                                 <p>belgian triple 9,2%</p>
                             </li>
                             <li>
                                 <h3>Hirsch Doppelbock 50cl &emsp; 6</h3>
                                 <p>rossa tedesca 7,2%</p>
                             </li>
-                            <li>
-                                <h3>Castelli Calix Niger 75cl &emsp; 14</h3>
-                                <p>chocolate stout 6,7%</p>
-                            </li>
+
                             <li>
                                 <h3>Mariahilfer Shwarze 50cl &emsp; 6</h3>
                                 <p>nera tedesca 5,5% </p>
