--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <!-- inizio header -->
 	<header class="homepage-hero" itemscope itemtype="http://schema.org/Restaurant">
 		<div class="row">
-			<div class="small-12 columns">
+			<div class="small-12 medium-12 large-12 columns">
 				<h1 class="text-highlight" itemprop="description">Per chi&thinsp;&ndash;come noi&ndash;&thinsp;<br>ama gli hamburger goduriosi<br>e la birra artigianale</h1>
 			</div>
 		</div>
