--- a/asporto/index.html
+++ b/asporto/index.html
@@ -74,15 +74,9 @@
     <header class="asporto-hero" itemscope itemtype="http://schema.org/Restaurant">
         <div class="row">
             <div class="small-12 columns">
-                <h1 class="text-highlight" itemprop="description">Hamburger a casa tua. Caldo, in meno di 30 minuti.</h1>
+                <h1 class="text-highlight" itemprop="description">Hamburger a casa tua.<br>Caldo, in meno di 30 minuti.</h1>
             </div>
         </div>
-        <!-- <div class="row">
-            <div class="small-12 columns show-for-small-only extra-space clearfix">
-                <a role="button" href="tel:+390718853384" class="button small left extra-space-button"><i class="fa fa-phone"></i> Chiama</a>
-                <a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.4s35636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fa fa-map-marker"></i> Dove Siamo</a>
-            </div>
-        </div> -->
     </header>
     <div class="panel-asporto">
         <div class="row">
