--- a/menu/index.html
+++ b/menu/index.html
@@ -282,7 +282,7 @@
                         </li>
                         <li>
                             <h3>Castelli Italicum &emsp;  4 / 6</h3>
-                            <p>bionda fruttata 5%</p>
+                            <p>bionda fruttata 5,0%</p>
                         </li>
                         <li>
                             <h3>Zotler Korbinian &emsp;  4 / 6</h3>
@@ -301,8 +301,8 @@
                             <p>american pale ale 6,5%</p>
                         </li>
                         <li>
-                            <h3>MC-77 Bow Tie &emsp;  4 / 6</h3>
-                            <p>ipa amara 6,4%</p>
+                            <h3>MC-77 Glu Glu Kolsh  &emsp;  4 / 6</h3>
+                            <p>kolsh 5,0%</p>
                         </li>
                         <li>
                             <h3>Mukkeller Hattori Hanzo &emsp;  4 / 6</h3>
@@ -323,10 +323,6 @@
                             <li>
                                 <h3>Mukkellerina Pils 50cl &emsp; 6</h3>
                                 <p>Keller con finale secco 4,8%</p>
-                            </li>
-                            <li>
-                                <h3>Hirsch Winterbier 50cl &emsp; 6</h3>
-                                <p>mazen 6,3%</p>
                             </li>
                             <li>
                                 <h3>Zotler 1447 50cl &emsp; 6</h3>
@@ -374,7 +370,7 @@
                             </li>
 
                             <li>
-                                <h3>Mariahilfer Shwarze 50cl &emsp; 6</h3>
+                                <h3>Mariahilfer Schwarze 50cl &emsp; 6</h3>
                                 <p>nera tedesca 5,5% </p>
                             </li>
                             <li>
