--- a/asporto/index.html
+++ b/asporto/index.html
@@ -259,45 +259,6 @@
 <!-- birra -->
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Birre artigianali alla Spina <br><small>Per Asporti e consegne a domicilio solo media.</small></h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
-                        <li>
-                            <h3>Gambrinus Helles &emsp;  6</h3>
-                            <p>keller non amara 4,9%</p>
-                        </li>
-                        <li>
-                            <h3>Castelli Italicum &emsp;  6</h3>
-                            <p>bionda fruttata 5%</p>
-                        </li>
-                        <li>
-                            <h3>Zotler Korbinian &emsp;  6</h3>
-                            <p>rossa tedesca 5,2%</p>
-                        </li>
-                        <li>
-                            <h3>Castelli Palmares &emsp;  6</h3>
-                            <p>rossa stile inglese 5,6%</p>
-                        </li>
-                        <li>
-                            <h3>Mr Wolf &emsp;  6</h3>
-                            <p>triple 9,2%</p>
-                        </li>
-                        <li>
-                            <h3>Castelli Mirabilia &emsp;  6</h3>
-                            <p>american pale ale 6,5%</p>
-                        </li>
-                        <li>
-                            <h3>MC-77 Bow Tie &emsp;  6</h3>
-                            <p>ipa 6,4%</p>
-                        </li>
-                        <li>
-                            <h3>Mukkeller Hattori Hanzo &emsp;  6</h3>
-                            <p>doppia ipa amara 8,2%</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Birre artigianali in bottiglia</h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
@@ -307,10 +268,6 @@
                         <li>
                             <h3>Mukkellerina Pils 50cl &emsp; 6</h3>
                             <p>Keller con finale secco 4,8%</p>
-                        </li>
-                        <li>
-                            <h3>Hirsch Winterbier 50cl &emsp; 6</h3>
-                            <p>mazen 6,3%</p>
                         </li>
                         <li>
                             <h3>Zotler 1447 50cl &emsp; 6</h3>
@@ -357,7 +314,7 @@
                             <p>rossa tedesca 7,2%</p>
                         </li>
                         <li>
-                            <h3>Mariahilfer Shwarze 50cl &emsp; 6</h3>
+                            <h3>Mariahilfer Schwarze 50cl &emsp; 6</h3>
                             <p>nera tedesca 5,5% </p>
                         </li>
                         <li>
