--- a/menu/index.html
+++ b/menu/index.html
@@ -321,7 +321,7 @@
                                 <p>bionda pils 4,9%</p>
                             </li>
                             <li>
-                                <h3>Mukkellerina Pils 50cl &emsp; 6</h3>
+                                <h3>Mukkellerina 50cl &emsp; 6</h3>
                                 <p>Keller con finale secco 4,8%</p>
                             </li>
                             <li>
@@ -340,10 +340,7 @@
                                 <h3>Hoesl Resi Weisse 50cl &emsp; 6</h3>
                                 <p>weisse 5,2% </p>
                             </li>
-                            <li>
-                                <h3>Rhaner Barley Wine 33cl &emsp; 6,5</h3>
-                                <p>barley wine 10,5% </p>
-                            </li>
+                            <
                             <li>
                                 <h3>Mukkeller Mugnetti 50cl &emsp; 6</h3>
                                 <p>ale 6% </p>
@@ -364,11 +361,14 @@
                                 <h3>Mukkeller Mr Wolf 33cl &emsp; 6</h3>
                                 <p>belgian triple 9,2%</p>
                             </li>
+                            li>
+                                <h3>Rhaner Barley Wine 33cl &emsp; 6,5</h3>
+                                <p>barley wine 10,5% </p>
+                            </li>
                             <li>
                                 <h3>Hirsch Doppelbock 50cl &emsp; 6</h3>
                                 <p>rossa tedesca 7,2%</p>
                             </li>
-
                             <li>
                                 <h3>Mariahilfer Schwarze 50cl &emsp; 6</h3>
                                 <p>nera tedesca 5,5% </p>
