--- a/asporto/index.html
+++ b/asporto/index.html
@@ -266,7 +266,7 @@
                             <p>bionda pils 4,9%</p>
                         </li>
                         <li>
-                            <h3>Mukkellerina Pils 50cl &emsp; 6</h3>
+                            <h3>Mukkellerina 50cl &emsp; 6</h3>
                             <p>Keller con finale secco 4,8%</p>
                         </li>
                         <li>
@@ -284,10 +284,6 @@
                         <li>
                             <h3>Hoesl Resi Weisse 50cl &emsp; 6</h3>
                             <p>weisse 5,2% </p>
-                        </li>
-                        <li>
-                            <h3>Rhaner Barley Wine 33cl &emsp; 6,5</h3>
-                            <p>barley wine 10,5% </p>
                         </li>
                         <li>
                             <h3>Mukkeller Mugnetti 50cl &emsp; 6</h3>
@@ -308,6 +304,10 @@
                         <li>
                             <h3>Mukkeller mr Wolf 33cl &emsp; 6</h3>
                             <p>belgian triple 9,2%</p>
+                        </li>
+                        <li>
+                            <h3>Rhaner Barley Wine 33cl &emsp; 6,5</h3>
+                            <p>barley wine 10,5% </p>
                         </li>
                         <li>
                             <h3>Hirsch Doppelbock 50cl &emsp; 6</h3>
