--- a/menu/index.html
+++ b/menu/index.html
@@ -193,6 +193,14 @@
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Non Solo Carne<br><small>Burger vegetariani e di pesce di nostra produzione. Serviti con patate fritte.</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                          <li>
+                            <h3>Vegetariano Fagioli &emsp; 8,9</h3>
+                            <p>hamburger di borlotti, julienne di cipolla fritta, bietole</p>
+                        </li>
+                        <li>
+                            <h3>Vegetariano Quinoa &emsp; 8,9</h3>
+                            <p>hamburger di Quinoa e Bulgur, Rucola, Cipolla Caramellata; Composta di Rape Rosse, Senape e Miele</p>
+                        </li>
                         <li>
                             <h3>Salmone &emsp; 13,5 / doppio 17,9</h3>
                             <p>hamburger di salmone (150 grammi), citronette agli agrumi, capperi e insalata riccia</p>
@@ -200,10 +208,6 @@
                         <li>
                             <h3>Persico &emsp; 12,5 / doppio 16,5</h3>
                             <p>hamburger di persico (150 grammi), salsa di tonno, acciughe e capperi; insalata riccia</p>
-                        </li>
-                        <li>
-                            <h3>Vegetariano &emsp; 8,9</h3>
-                            <p>hamburger di borlotti, julienne di cipolla fritta, bietole</p>
                         </li>
                     </ul>
                 </div>
