fix menu e asporto

--- a/asporto/index.html
+++ b/asporto/index.html
@@ -94,7 +94,7 @@
             <div class="medium-6 large-6 columns">
                 <span class="show-for-small"><br></span>
                 <h4><strong>Servizio consegna a domicilio:</strong> 1,5€ per ordine; gratis per ordini superiori ai 40€.</h4>
-                <h4>Effettuiamo le consegne a Filottrano e Montoro.</h4>
+                <h4>Effettuiamo le consegne a Filottrano, Montoro, Imbrecciata e Sant'Ignazio.</h4>
             </div>
         </div>
         <div class="row">
@@ -202,7 +202,7 @@
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
                             <h3>Vegetariano Fagioli &emsp; 8,9</h3>
-                            <p>hamburger di borlotti, julienne di cipolla fritta, bietole</p>
+                            <p>hamburger di borlotti, julienne di cipolla fritta, crema di bietole</p>
                         </li>
                         <li>
                             <h3>Vegetariano Quinoa &emsp; 8,9</h3>
