--- a/menu/index.html
+++ b/menu/index.html
@@ -195,7 +195,7 @@
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                           <li>
                             <h3>Vegetariano Fagioli &emsp; 8,9</h3>
-                            <p>hamburger di borlotti, julienne di cipolla fritta, bietole</p>
+                            <p>hamburger di borlotti, julienne di cipolla fritta, crema di bietole</p>
                         </li>
                         <li>
                             <h3>Vegetariano Quinoa &emsp; 8,9</h3>
