--- a/asporto/index.html
+++ b/asporto/index.html
@@ -94,7 +94,7 @@
             <div class="medium-6 large-6 columns">
                 <span class="show-for-small"><br></span>
                 <h4><strong>Servizio consegna a domicilio:</strong> 1,5€ per ordine; gratis per ordini superiori ai 40€.</h4>
-                <h4>Effettuiamo le consegne a Filottrano, Montoro, Imbrecciata e Sant'Ignazio.</h4>
+                <h4>Effettuiamo le consegne a Filottrano, Sant'Ignazio, Imbrecciata, Montoro e San Biagio.</h4>
             </div>
         </div>
         <div class="row">
