update menu to primavera

--- a/menu/index.html
+++ b/menu/index.html
@@ -167,8 +167,8 @@
                             <p>manzo, cheddar, bacon croccante, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Inverno &emsp; 10,5 / doppio 14,9</h3>
-                            <p>manzo, scamorza affumicata, speck croccante, radicchio spadellato</p>
+                            <h3>Primavera &emsp; 8,9 / doppio 14,9</h3>
+                            <p>manzo, composta di feta, pomodorini e timo; insalata riccia</p>
                         </li>
                         <li>
                             <h3>Cacio e Pepe &emsp; 10,5 / doppio 14,9</h3>
@@ -191,7 +191,7 @@
             </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Non Solo Carne<br><small>Burger vegetariani e di pesce di nostra produzione. Serviti con patate fritte.</small></h2>
+                    <h2 class="subheader">Hamburger Vegetariani e di Pesce<br><small>Burger vegetariani e di pesce di nostra produzione. Serviti con patate fritte.</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                           <li>
                             <h3>Vegetariano Fagioli &emsp; 8,9</h3>
