--- a/asporto/index.html
+++ b/asporto/index.html
@@ -206,7 +206,7 @@
                         </li>
                         <li>
                             <h3>Vegetariano Quinoa &emsp; 8,9</h3>
-                            <p>hamburger di Quinoa e Bulgur, Rucola, Cipolla Caramellata; Composta di Rape Rosse, Senape e Miele</p>
+                            <p>hamburger di quinoa e bulgur, rucola, cipolla caramellata; composta di rape rosse, senape e miele</p>
                         </li>
                         <li>
                             <h3>Salmone &emsp; 13,5 / doppio 17,9</h3>
