--- a/menu/index.html
+++ b/menu/index.html
@@ -195,19 +195,19 @@
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                           <li>
                             <h3>Vegetariano Fagioli &emsp; 8,9</h3>
-                            <p>Hamburger di Borlotti, Julienne di Cipolla Fritta, Crema di Bietole</p>
+                            <p>hamburger di borlotti, julienne di cipolla fritta, crema di bietole</p>
                         </li>
                         <li>
                             <h3>Vegetariano Quinoa &emsp; 8,9</h3>
-                            <p>Hamburger di Quinoa e Bulgur, Rucola, Cipolla Caramellata; Composta di Rape Rosse, Senape e Miele</p>
+                            <p>hamburger di quinoa e bulgur, rucola, cipolla caramellata; composta di rape rosse, senape e miele</p>
                         </li>
                         <li>
                             <h3>Salmone &emsp; 13,5 / doppio 17,9</h3>
-                            <p>Hamburger di Salmone (150 grammi), Citronette agli Agrumi, Capperi e Insalata Riccia</p>
+                            <p>hamburger di salmone (150 grammi), citronette agli agrumi, capperi e insalata riccia</p>
                         </li>
                         <li>
                             <h3>Persico &emsp; 12,5 / doppio 16,5</h3>
-                            <p>Hamburger di Persico (150 grammi), Salsa di Tonno, Acciughe e Capperi; Insalata Riccia</p>
+                            <p>hamburger di persico (150 grammi), salsa di tonno, acciughe e capperi; insalata riccia</p>
                         </li>
                     </ul>
                 </div>
