--- a/asporto/index.html
+++ b/asporto/index.html
@@ -143,7 +143,7 @@
                             <p>servite con salse del Beerstrot</p>
                         </li>
                         <li>
-                            <h3>Cipolla Fritta &emsp; 4,5</h3>
+                            <h3>Anelli di Cipolla &emsp; 4,5</h3>
                             <p>anelli di cipolla dorata impanati</p>
                         </li>
                         <li>
