--- a/contatti/index.html
+++ b/contatti/index.html
@@ -75,8 +75,8 @@
                 <h6>Telefono:
                     <a href="tel:+390718853384"><span itemprop="telephone">071 8853384</span></a>
                 </h6>
-                <h6>Chat:
-                    <a href="https://wa.me/390718853384"><span itemprop="telephone">Whatsapp</span></a>
+                <h6>Ordina e Prenota Online con Facebook Messenger:
+                    <a href="https://m.me/cavecchiabeerstrot"><span itemprop="telephone">Ordina e Prenota</span></a>
                 </h6>
                 <h6>Email:
                     <a href="mailto:info@beerstrot.it"><span itemprop="email">info@beerstrot.it</span></a>
