--- a/contatti/index.html
+++ b/contatti/index.html
@@ -90,10 +90,12 @@
                     <span class="hide-for-small" itemprop="addressCountry">Italia</span></a>
                 </h6>
                 <hr>
-                <h6>Ragione Sociale: GANG SRLS</h6>
-                <h6>Partita IVA: 02663640429</h6>
-                <h6>Codice SDI: USAL8PV</h6>
-                <h6>Indirizzo: Via Centofinestre, 20  60024 Filottrano AN Italia</h6>
+                <div class="hide-for-small">
+                    <h6>Ragione Sociale: GANG SRLS</h6>
+                    <h6>Partita IVA: 02663640429</h6>
+                    <h6>Codice SDI: USAL8PV</h6>
+                    <h6>Indirizzo: Via Centofinestre, 20  60024 Filottrano AN Italia</h6>
+                </div>
             </div>
             <div class="medium-6 large-6 columns">
                 <a role="button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><img class="extra-space-image-tab-contatti" src="http://www.beerstrot.it/asset/img/medium/mappa.jpg" alt="Mappa"></a>
