--- a/contatti/index.html
+++ b/contatti/index.html
@@ -76,7 +76,7 @@
                     <a href="tel:+390718853384"><span itemprop="telephone">071 8853384</span></a>
                 </h6>
                 <h6>Ordina e Prenota Online:
-                    <a href="https://m.me/cavecchiabeerstrot"><span itemprop="telephone">FB Messenger</span></a>
+                    <a href="https://m.me/cavecchiabeerstrot"><span itemprop="telephone">Messenger</span></a>
                 </h6>
                 <h6>Email:
                     <a href="mailto:info@beerstrot.it"><span itemprop="email">info@beerstrot.it</span></a>
