update open hours

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 			<div class="medium-6 large-6 columns">
 				<h2>Ristorante</h2>
 				<p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong>: dalle 19:00 alle 23:00</p>
+				<p>Siamo aperti il <strong>24 Aprile</strong>, Il <strong>30 Aprile</strong> e il <strong>1 Maggio</strong>: dalle 19:00 alle 23:00</p>
 			</div>
 			<div class="medium-6 large-6 columns">
 				<h2>Asporto e Consegne</h2>
