--- a/menu/index.html
+++ b/menu/index.html
@@ -76,6 +76,7 @@
             <h1>Menù</h1>
             <hr>
             <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></p>
+            <p>Siamo aperti il <strong>24 Aprile</strong>, Il <strong>30 Aprile</strong> e il <strong>1 Maggio</strong>: dalle 19:00 alle 23:00</p>
         </div>
     </header>
         <div class="row">
